--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     <meta name="msapplication-TileImage" content="<%= BASE_URL %>icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="stylesheet" href="<%= BASE_URL %>styles/main.css" />
+
     <title>Nepali companies echosystem</title>
     
   </head>
